Test for random numbers in drawer

--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
                 <li>
                     <a href="Telephone Number Validator/telephone-number-validator.html" style="color: yellow;">Telephone Number Validator</a>
                 </li>
+                <li>
+                    <a href="Cash register machine/cash-register.html" style="color: yellow;">Cash Register Machine</a>
+                </li>
             </ul>
 
             <h4>Learn list:</h4>
